// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationsListSorting component renders will set state on receiving new props 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-sort-by"
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-0"
          id="publication-list-sorting-sort-by-option-0"
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-1"
          id="publication-list-sorting-sort-by-option-1"
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-2"
          id="publication-list-sorting-sort-by-option-2"
          key="2"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-3"
          id="publication-list-sorting-sort-by-option-3"
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-4"
          id="publication-list-sorting-sort-by-option-4"
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-5"
          id="publication-list-sorting-sort-by-option-5"
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-6"
          id="publication-list-sorting-sort-by-option-6"
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-7"
          id="publication-list-sorting-sort-by-option-7"
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-sort-order"
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-order-option-0"
          id="publication-list-sorting-sort-order-option-0"
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-order-option-1"
          id="publication-list-sorting-sort-order-option-1"
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={12}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Works per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-page-size"
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={5}
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-5"
          id="publication-list-sorting-page-size-option-5"
          key="records-per-page-5"
          value={5}
        >
          5
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-10"
          id="publication-list-sorting-page-size-option-10"
          key="records-per-page-10"
          value={10}
        >
          10
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-20"
          id="publication-list-sorting-page-size-option-20"
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-50"
          id="publication-list-sorting-page-size-option-50"
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-100"
          id="publication-list-sorting-page-size-option-100"
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={12}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Display results
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-display-records-as"
        disabled={false}
        id="displayRecordsAs"
        onChange={[Function]}
        value="auto"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-0"
          id="publication-display-records-as-option-0"
          key="0"
          value="auto"
        >
          (auto)
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-1"
          id="publication-display-records-as-option-1"
          key="1"
          value="standard"
        >
          Standard
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-2"
          id="publication-display-records-as-option-2"
          key="2"
          value="image-gallery"
        >
          Image Gallery
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`PublicationsListSorting component renders will set state on receiving new props 2`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-sort-by"
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-0"
          id="publication-list-sorting-sort-by-option-0"
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-1"
          id="publication-list-sorting-sort-by-option-1"
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-2"
          id="publication-list-sorting-sort-by-option-2"
          key="2"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-3"
          id="publication-list-sorting-sort-by-option-3"
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-4"
          id="publication-list-sorting-sort-by-option-4"
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-5"
          id="publication-list-sorting-sort-by-option-5"
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-6"
          id="publication-list-sorting-sort-by-option-6"
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-7"
          id="publication-list-sorting-sort-by-option-7"
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-sort-order"
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-order-option-0"
          id="publication-list-sorting-sort-order-option-0"
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-order-option-1"
          id="publication-list-sorting-sort-order-option-1"
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={12}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Works per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-page-size"
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={5}
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-5"
          id="publication-list-sorting-page-size-option-5"
          key="records-per-page-5"
          value={5}
        >
          5
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-10"
          id="publication-list-sorting-page-size-option-10"
          key="records-per-page-10"
          value={10}
        >
          10
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-20"
          id="publication-list-sorting-page-size-option-20"
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-50"
          id="publication-list-sorting-page-size-option-50"
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-100"
          id="publication-list-sorting-page-size-option-100"
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={12}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Display results
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-display-records-as"
        disabled={false}
        id="displayRecordsAs"
        onChange={[Function]}
        value="standard"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-0"
          id="publication-display-records-as-option-0"
          key="0"
          value="auto"
        >
          (auto)
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-1"
          id="publication-display-records-as-option-1"
          key="1"
          value="standard"
        >
          Standard
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-2"
          id="publication-display-records-as-option-2"
          key="2"
          value="image-gallery"
        >
          Image Gallery
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`PublicationsListSorting component renders with empty paging data 1`] = `
<span
  className="publicationsListSorting empty"
/>
`;

exports[`PublicationsListSorting component renders with export dropdown for admin or author 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-sort-by"
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-0"
          id="publication-list-sorting-sort-by-option-0"
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-1"
          id="publication-list-sorting-sort-by-option-1"
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-2"
          id="publication-list-sorting-sort-by-option-2"
          key="2"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-3"
          id="publication-list-sorting-sort-by-option-3"
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-4"
          id="publication-list-sorting-sort-by-option-4"
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-5"
          id="publication-list-sorting-sort-by-option-5"
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-6"
          id="publication-list-sorting-sort-by-option-6"
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-7"
          id="publication-list-sorting-sort-by-option-7"
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={2}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-sort-order"
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-order-option-0"
          id="publication-list-sorting-sort-order-option-0"
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-order-option-1"
          id="publication-list-sorting-sort-order-option-1"
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={2}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Works per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-page-size"
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-10"
          id="publication-list-sorting-page-size-option-10"
          key="records-per-page-10"
          value={10}
        >
          10
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-20"
          id="publication-list-sorting-page-size-option-20"
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-50"
          id="publication-list-sorting-page-size-option-50"
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-100"
          id="publication-list-sorting-page-size-option-100"
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={2}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Display results
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-display-records-as"
        disabled={false}
        id="displayRecordsAs"
        onChange={[Function]}
        value="auto"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-0"
          id="publication-display-records-as-option-0"
          key="0"
          value="auto"
        >
          (auto)
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-1"
          id="publication-display-records-as-option-1"
          key="1"
          value="standard"
        >
          Standard
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-2"
          id="publication-display-records-as-option-2"
          key="2"
          value="image-gallery"
        >
          Image Gallery
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <Hidden
    xsDown={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={3}
      sm={6}
    >
      <ExportPublications
        disabled={false}
        exportData={Object {}}
        onChange={[Function]}
      />
    </WithStyles(ForwardRef(Grid))>
  </Hidden>
</WithStyles(ForwardRef(Grid))>
`;

exports[`PublicationsListSorting component renders with export dropdown hidden 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-sort-by"
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-0"
          id="publication-list-sorting-sort-by-option-0"
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-1"
          id="publication-list-sorting-sort-by-option-1"
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-2"
          id="publication-list-sorting-sort-by-option-2"
          key="2"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-3"
          id="publication-list-sorting-sort-by-option-3"
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-4"
          id="publication-list-sorting-sort-by-option-4"
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-5"
          id="publication-list-sorting-sort-by-option-5"
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-6"
          id="publication-list-sorting-sort-by-option-6"
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-7"
          id="publication-list-sorting-sort-by-option-7"
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-sort-order"
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-order-option-0"
          id="publication-list-sorting-sort-order-option-0"
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-order-option-1"
          id="publication-list-sorting-sort-order-option-1"
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={12}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Works per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-page-size"
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-10"
          id="publication-list-sorting-page-size-option-10"
          key="records-per-page-10"
          value={10}
        >
          10
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-20"
          id="publication-list-sorting-page-size-option-20"
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-50"
          id="publication-list-sorting-page-size-option-50"
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-100"
          id="publication-list-sorting-page-size-option-100"
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={12}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Display results
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-display-records-as"
        disabled={false}
        id="displayRecordsAs"
        onChange={[Function]}
        value="auto"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-0"
          id="publication-display-records-as-option-0"
          key="0"
          value="auto"
        >
          (auto)
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-1"
          id="publication-display-records-as-option-1"
          key="1"
          value="standard"
        >
          Standard
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-2"
          id="publication-display-records-as-option-2"
          key="2"
          value="image-gallery"
        >
          Image Gallery
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`PublicationsListSorting component renders with non-empty paging data 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-sort-by"
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-0"
          id="publication-list-sorting-sort-by-option-0"
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-1"
          id="publication-list-sorting-sort-by-option-1"
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-2"
          id="publication-list-sorting-sort-by-option-2"
          key="2"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-3"
          id="publication-list-sorting-sort-by-option-3"
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-4"
          id="publication-list-sorting-sort-by-option-4"
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-5"
          id="publication-list-sorting-sort-by-option-5"
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-6"
          id="publication-list-sorting-sort-by-option-6"
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-7"
          id="publication-list-sorting-sort-by-option-7"
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-sort-order"
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-order-option-0"
          id="publication-list-sorting-sort-order-option-0"
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-order-option-1"
          id="publication-list-sorting-sort-order-option-1"
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={12}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Works per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-page-size"
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-10"
          id="publication-list-sorting-page-size-option-10"
          key="records-per-page-10"
          value={10}
        >
          10
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-20"
          id="publication-list-sorting-page-size-option-20"
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-50"
          id="publication-list-sorting-page-size-option-50"
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-100"
          id="publication-list-sorting-page-size-option-100"
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={12}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Display results
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-display-records-as"
        disabled={false}
        id="displayRecordsAs"
        onChange={[Function]}
        value="auto"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-0"
          id="publication-display-records-as-option-0"
          key="0"
          value="auto"
        >
          (auto)
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-1"
          id="publication-display-records-as-option-1"
          key="1"
          value="standard"
        >
          Standard
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-2"
          id="publication-display-records-as-option-2"
          key="2"
          value="image-gallery"
        >
          Image Gallery
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`PublicationsListSorting component updates sortBy, sortDirection and pageSize state when they change after render 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-sort-by"
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-0"
          id="publication-list-sorting-sort-by-option-0"
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-1"
          id="publication-list-sorting-sort-by-option-1"
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-2"
          id="publication-list-sorting-sort-by-option-2"
          key="2"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-3"
          id="publication-list-sorting-sort-by-option-3"
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-4"
          id="publication-list-sorting-sort-by-option-4"
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-5"
          id="publication-list-sorting-sort-by-option-5"
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-6"
          id="publication-list-sorting-sort-by-option-6"
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-7"
          id="publication-list-sorting-sort-by-option-7"
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-sort-order"
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-order-option-0"
          id="publication-list-sorting-sort-order-option-0"
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-order-option-1"
          id="publication-list-sorting-sort-order-option-1"
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={12}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Works per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-page-size"
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-5"
          id="publication-list-sorting-page-size-option-5"
          key="records-per-page-5"
          value={5}
        >
          5
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-10"
          id="publication-list-sorting-page-size-option-10"
          key="records-per-page-10"
          value={10}
        >
          10
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-15"
          id="publication-list-sorting-page-size-option-15"
          key="records-per-page-15"
          value={15}
        >
          15
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-20"
          id="publication-list-sorting-page-size-option-20"
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-50"
          id="publication-list-sorting-page-size-option-50"
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-100"
          id="publication-list-sorting-page-size-option-100"
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={12}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Display results
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-display-records-as"
        disabled={false}
        id="displayRecordsAs"
        onChange={[Function]}
        value="auto"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-0"
          id="publication-display-records-as-option-0"
          key="0"
          value="auto"
        >
          (auto)
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-1"
          id="publication-display-records-as-option-1"
          key="1"
          value="standard"
        >
          Standard
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-2"
          id="publication-display-records-as-option-2"
          key="2"
          value="image-gallery"
        >
          Image Gallery
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`PublicationsListSorting component updates sortBy, sortDirection and pageSize state when they change after render 2`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-sort-by"
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="score"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-0"
          id="publication-list-sorting-sort-by-option-0"
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-1"
          id="publication-list-sorting-sort-by-option-1"
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-2"
          id="publication-list-sorting-sort-by-option-2"
          key="2"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-3"
          id="publication-list-sorting-sort-by-option-3"
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-4"
          id="publication-list-sorting-sort-by-option-4"
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-5"
          id="publication-list-sorting-sort-by-option-5"
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-6"
          id="publication-list-sorting-sort-by-option-6"
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-by-option-7"
          id="publication-list-sorting-sort-by-option-7"
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-sort-order"
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Asc"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-order-option-0"
          id="publication-list-sorting-sort-order-option-0"
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-sort-order-option-1"
          id="publication-list-sorting-sort-order-option-1"
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={12}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Works per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-sorting-page-size"
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={50}
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-5"
          id="publication-list-sorting-page-size-option-5"
          key="records-per-page-5"
          value={5}
        >
          5
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-10"
          id="publication-list-sorting-page-size-option-10"
          key="records-per-page-10"
          value={10}
        >
          10
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-15"
          id="publication-list-sorting-page-size-option-15"
          key="records-per-page-15"
          value={15}
        >
          15
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-20"
          id="publication-list-sorting-page-size-option-20"
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-50"
          id="publication-list-sorting-page-size-option-50"
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-list-sorting-page-size-option-100"
          id="publication-list-sorting-page-size-option-100"
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    md={3}
    sm={12}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Display results
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        data-testid="publication-list-display-records-as"
        disabled={false}
        id="displayRecordsAs"
        onChange={[Function]}
        value="image-gallery"
      >
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-0"
          id="publication-display-records-as-option-0"
          key="0"
          value="auto"
        >
          (auto)
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-1"
          id="publication-display-records-as-option-1"
          key="1"
          value="standard"
        >
          Standard
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          data-testid="publication-display-records-as-option-2"
          id="publication-display-records-as-option-2"
          key="2"
          value="image-gallery"
        >
          Image Gallery
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
